stat prevent text wrapping

--- a/src/components/stat/stat.styl
+++ b/src/components/stat/stat.styl
@@ -1,10 +1,11 @@
 @import "@theatersoft/components"
 
 .stat
-    padding 0 h(8)
+    padding 0 h(6)
 
 .time
     font-size font-size-x-large
+    white-space nowrap
     line-height 80%
     margin-bottom h(8)
 .ot
@@ -20,6 +21,7 @@
     margin-bottom  h(2)
 .hum
     margin-bottom  h(-4)
+    white-space nowrap
 .clsp
     font-size font-size-x-large
     margin-bottom  h(-2)
